set default shift

--- a/03.Client/tiqn/pubspec.yaml
+++ b/03.Client/tiqn/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   path_provider: any
   intl: any
   slide_digital_clock: ^1.0.3
+  toastification: ^1.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
