--- a/03.Client/tiqn/pubspec.yaml
+++ b/03.Client/tiqn/pubspec.yaml
@@ -64,17 +64,28 @@ dependencies:
   path_provider: any
   intl: any
   slide_digital_clock: ^1.0.3
-  toastification: ^1.2.1
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  toastification: ^1.2.1 
+  flutter_launcher_icons: ^0.13.1
+  rename_app: ^1.3.2
+dev_dependencies: 
+  flutter_lints: ^3.0.0 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/fingerprint-scanner.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/images/fingerprint-scanner.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/images/fingerprint-scanner.png"
+    icon_size: 256 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/fingerprint-scanner.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
