--- a/03.Client/tiqn/.vscode/settings.json
+++ b/03.Client/tiqn/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "cmake.sourceDirectory": "D:/Programming/Flutter/tiqnapp-desktop-web-mobile/tiqnapp/tiqn/build/windows/x64/pdfium-download"
+    "cmake.sourceDirectory": "D:/Programming/01.AttendanceApp/03.Client/tiqn/windows"
 }
