--- a/03.Client/tiqn/pubspec.yaml
+++ b/03.Client/tiqn/pubspec.yaml
@@ -69,7 +69,7 @@ dependencies:
   rename_app: ^1.3.2 
 dev_dependencies: 
   flutter_lints: ^3.0.0 
-  flutter_test: any
+  # flutter_test: any
 # flutter_launcher_icons:
 #   android: "launcher_icon"
 #   ios: true
