--- a/03.Client/tiqn/pubspec.yaml
+++ b/03.Client/tiqn/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   toastification: ^1.2.1 
   # flutter_launcher_icons: ^0.13.1
   rename_app: ^1.3.2 
+  dropdown_button2: ^2.3.9
 dev_dependencies: 
   flutter_lints: ^3.0.0 
   # flutter_test: any
